--- a/assets/pages/at1.html
+++ b/assets/pages/at1.html
@@ -15,7 +15,7 @@
 
     <section id="at1_container">
     
-        <h2> 1 - Calculo de média atitimética</h2>
+        <h2> 1 - Calculo de média aritimética</h2>
         <hr>
         <div class="at1_data">
             <label for="#at1_nota1">nota1:</label>
