--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>Atividade de fixação 2</h1>
     <script src="./assets/js/script.js"></script>
     <br><hr>
-    <section>
+    <nav>
         <button><a href="./assets/pages/at1.html">Questão-1</a></button>
         <button><a href="./assets/pages/at2-3-4.html">Questão-2-3-4</a></button>
         <button><a href="./assets/pages/at5.html">Questão-5</a></button>
         <button><a href="./assets/pages/at6.html">Questão-6</a></button>
 
-    </section>
+    </nav>
 
 
 </body>
